--- a/views/basic/chart.ejs
+++ b/views/basic/chart.ejs
@@ -7,9 +7,9 @@
     <div class="chartTab">
       <%- include('./search') %>
       <div class="chartCrt">
-        <div class = "criteria" id = "chartBtn1">지난 7일 총인원</div>
-        <div class = "criteria" id = "chartBtn2">시간 별 총인원</div>
-        <div class = "criteria" id = "chartBtn3">최근 평균 인원수</div>
+        <div class = "criteria" id = "chartBtn1"><button class="submit" type="button">지난 7일 총인원</button></div>
+        <div class = "criteria" id = "chartBtn2"><button class="submit" type="button">시간 별 총인원</button></div>
+        <div class = "criteria" id = "chartBtn3"><button class="submit" type="button">최근 평균 인원수</button></div>
       </div>
       </div>
       <div class="chart">
