--- a/views/basic/index.ejs
+++ b/views/basic/index.ejs
@@ -5,8 +5,8 @@
     <title>admin</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <link rel="stylesheet" href="./public/css/chart.css">
-    <link rel="stylesheet" href="./public/css/info.css">
-    <link rel="stylesheet" href="./public/css/cameraImage.css">
+    <link rel="stylesheet" href="./public/css/info_window.css">
+    <link rel="stylesheet" href="./public/css/cameraImage_window.css">
     <link rel="stylesheet" href="./public/css/search.css">
     <script src="https://use.fontawesome.com/893b912e06.js"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
@@ -19,7 +19,7 @@
     </div>
     <%- include('./info') %>
     <%- include('./chart') %>
-    <%- include('./cameraImage') %>
+    <%- include('./cameraImage_window') %>
     <script type="text/javascript">
       var data3 = [];
       var data4 = [];
