--- a/public/css/info_window.css
+++ b/public/css/info_window.css
@@ -15,9 +15,8 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
   .info_table {
     border-collapse: separate;
     border-spacing: 0 15px;
+	font-size: 13px;
   }
-
-
   .site_info {
     background:#1b1b21;
     height: 200px; width:24.5%;
@@ -33,7 +32,8 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
   .info_div {
     padding-top: 15px;
     color: rgba(255, 255, 255, 0.6);
-    font-size: 14px;
+	/* fix */
+    font-size: 12px;
   }
   .thumbnail {
     display: inline-block;
@@ -47,7 +47,8 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
   .store {
     color: #4abd9e; float:left;
     padding: 8px 15px;
-    font-size: 18px;
+	/* fix */
+	font-size: 15px;
   }
   .setting {
     border: 0.75px solid #7f7f7f;
@@ -57,6 +58,7 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
     background: none;
     float: left;
     position: absolute; top: 8px; right: 32px;
+	font-size: 12px;
   }
 
   .cam_info {
@@ -73,7 +75,7 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
 
 
   .table_wrapper {
-    overflow: scroll;
+    overflow-y: scroll;
     white-space: nowrap;
     width: 92%;
     margin: 0 auto;
@@ -98,7 +100,6 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
 	width: 0;
 	height: 0;
   }
-
   .site_wrapper {
     padding-left: 20px;
   }
