--- a/views/admin/setting2.ejs
+++ b/views/admin/setting2.ejs
@@ -9,17 +9,17 @@
         <tr></tr>
         <tr>
           <td>카메라 해상도</td>
-          <td><input type="text" id="sizeW" value="<%= data.sizeW %>" name = "sizeW" class="input" placeholder="width" required readonly></td>
+          <td class="info_camera_middle"><input type="text" id="sizeW" value="<%= data.sizeW %>" name = "sizeW" class="input" placeholder="width" required readonly></td>
           <td><input type="text" id="sizeH" name = "sizeH" value="<%= data.sizeH %>" placeholder="height" required readonly></td>
         </tr>
         <tr>
           <td>리사이즈 해상도</td>
-          <td><input type="text" id="resizeW" value="<%= data.resizeW %>" name = "resizeW" class="input" placeholder="width" required readonly></td>
+          <td class="info_camera_middle"><input type="text" id="resizeW" value="<%= data.resizeW %>" name = "resizeW" class="input" placeholder="width" required readonly></td>
           <td><input type="text" id="resizeH" value="<%= data.resizeH %>" name = "resizeH" placeholder="height" required readonly></td>
         </tr>
         <tr>
           <td>카메라 숫자</td>
-          <td>
+          <td class="info_camera_middle">
             <% for(var i = 0; i < data.camNum; i++) {%>
               <% i %>
             <% } %>
@@ -30,19 +30,18 @@
               <option value="3" class="input">3</option>
             </select>
           </td>
-          <!--<td><button class="confirm btn submit" id="confirm">확인</button></td>-->
         </tr>
         </table>
       </div>
       <div class="info" id="info_image">
         <table>
           <tr class="info_title">
-            <td>이미지 저장 정보</td> <td><button class="edit btn" id="edit_image" type="button">수정</button></td>
+            <td class="info_image_left">이미지 저장 정보</td> <td><button class="edit btn" id="edit_image" type="button">수정</button></td>
           </tr>
           <tr></tr>
           <tr></tr>
          <tr>
-           <td>저장 간격</td>
+           <td class="info_image_left">저장 간격</td>
            <td>
              <select id="saveInterval" name="saveInterval" disabled>
                <option value="<%= data.saveInterval %>" class="input"><%= data.saveInterval %>초</option>
@@ -53,7 +52,7 @@
            </td>
          </tr>
          <tr>
-           <td>최대 저장 갯수</td>
+           <td class="info_image_left">최대 저장 갯수</td>
            <td>
              <select id="saveNum" name="saveNum" disabled>
                <option value="<%= data.saveNum %>" class="input"><%= data.saveNum %>개</option>
@@ -64,7 +63,7 @@
            </td>
          </tr>
          <tr>
-           <td>최대 저장 기간</td>
+           <td class="info_image_left">최대 저장 기간</td>
            <td>
              <select id="savePeriod" name="savePeriod" disabled>
                <option value="<%= data.savePeriod %>" class="input"><%= data.savePeriod %>개월</option>
@@ -73,15 +72,12 @@
                <option value="30" class="input">30개월</option>
              </select>
            </td>
-           <!--<td><button class="confirm btn submit" id="confirm_image">확인</button></td>-->
          </tr>
        </table>
        </div>
        <div id="space"></div>
+       <td><!--<button class="confirm btn submit" id="confirm">확인</button>--></td>
        </form>
-       <!--
-       <button class="btn" id="change">정보 수정</button>
-       <button class="submit btn" id="confirm">확인</button>-->
   </div>
 
 
@@ -96,17 +92,17 @@
           <tr></tr>
           <tr>
             <td>카메라 해상도</td>
-            <td><input type="text" id="sizeW" value="<%= data.sizeW %>" name = "sizeW" class="input" placeholder="width" required></td>
+            <td class="info_camera_middle"><input type="text" id="sizeW" value="<%= data.sizeW %>" name = "sizeW" class="input" placeholder="width" required></td>
             <td><input type="text" id="sizeH" name = "sizeH" value="<%= data.sizeH %>" placeholder="height" required></td>
           </tr>
           <tr>
             <td>리사이즈 해상도</td>
-            <td><input type="text" id="resizeW" value="<%= data.resizeW %>" name = "resizeW" class="input" placeholder="width" required></td>
+            <td class="info_camera_middle"><input type="text" id="resizeW" value="<%= data.resizeW %>" name = "resizeW" class="input" placeholder="width" required></td>
             <td><input type="text" id="resizeH" value="<%= data.resizeH %>" name = "resizeH" placeholder="height" required></td>
           </tr>
           <tr>
             <td>카메라 숫자</td>
-            <td>
+            <td class="info_camera_middle">
               <% for(var i = 0; i < data.camNum; i++) {%>
                 <% i %>
               <% } %>
@@ -117,19 +113,19 @@
                 <option value="3" class="input">3</option>
               </select>
             </td>
-            <td><button class="confirm btn submit" id="confirm">확인</button></td>
+            <!--<td><button class="confirm btn submit" id="confirm">확인</button></td>-->
           </tr>
           </table>
         </div>
         <div class="info" id="info_image">
           <table>
             <tr class="info_title">
-              <td>이미지 저장 정보</td>
+              <td class="info_image_left">이미지 저장 정보</td>
             </tr>
             <tr></tr>
             <tr></tr>
            <tr>
-             <td>저장 간격</td>
+             <td class="info_image_left">저장 간격</td>
              <td>
                <select id="saveInterval" name="saveInterval">
                  <option value="<%= data.saveInterval %>" class="input"><%= data.saveInterval %>초</option>
@@ -140,7 +136,7 @@
              </td>
            </tr>
            <tr>
-             <td>최대 저장 갯수</td>
+             <td class="info_image_left">최대 저장 갯수</td>
              <td>
                <select id="saveNum" name="saveNum">
                  <option value="<%= data.saveNum %>" class="input"><%= data.saveNum %>개</option>
@@ -151,7 +147,7 @@
              </td>
            </tr>
            <tr>
-             <td>최대 저장 기간</td>
+             <td class="info_image_left">최대 저장 기간</td>
              <td>
                <select id="savePeriod" name="savePeriod">
                  <option value="<%= data.savePeriod %>" class="input"><%= data.savePeriod %>개월</option>
@@ -165,10 +161,8 @@
          </table>
          </div>
          <div id="space"></div>
+         <td><button class="confirm btn submit" id="confirm">확인</button></td>
          </form>
-         <!--
-         <button class="btn" id="change">정보 수정</button>
-         <button class="submit btn" id="confirm">확인</button>-->
     </div>
 
-  <script src="./public/js/setting.js"></script>
+<script src="./public/js/setting.js"></script>
