--- a/public/css/chart.css
+++ b/public/css/chart.css
@@ -36,7 +36,7 @@ body{
 .chartTab{
   width: 100%;
   border-radius: 3px;
-  padding: 30px;
+  margin-top: 20px;
   text-align: justify;
 }
 .CameraNumber{
@@ -47,6 +47,8 @@ body{
 }
 .chartCrt{
   display: inline-block;
+  width: 39%;
+  text-align: right;
 }
 .criteria{
   display: inline-block;
