--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,11 +1,9 @@
 div#search{
-  //padding: 30px;
-  //padding: 30px 0px;
-  //border: solid 1px red;
   color: white;
   margin-bottom: 30px;
   float:left;
-  width:800px;;
+  width:60%;
+  //border:solid 1px red;
 }
 input, select{
   width:80%;
