--- a/public/css/info_window.css
+++ b/public/css/info_window.css
@@ -19,7 +19,7 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
   }
   .site_info {
     background:#1b1b21;
-    height: 200px; width:24.5%;
+    height: 200px; width:28.5%;
     margin-right:1.5%;
     float:left;
     border-radius: 15px;
@@ -30,7 +30,7 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
     position: relative;
   }
   .info_div {
-    padding-top: 15px;
+    padding-top: 23px;
     color: rgba(255, 255, 255, 0.6);
 	/* fix */
     font-size: 12px;
@@ -39,7 +39,7 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
     display: inline-block;
     width:35px; height:35px;
     border-radius:50px;
-    background: url(../../public/images/rain.jpg);
+    background: url(../../public/images/technonia_logo.png);
     background-size: cover;
     margin-bottom: 15px;
     float:left;
@@ -50,20 +50,22 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
 	/* fix */
 	font-size: 15px;
   }
-  .setting {
+
+  #setting {
     border: 0.75px solid #7f7f7f;
     color: #7f7f7f;
     padding: 2px 8px;
     border-radius: 50px;
     background: none;
     float: left;
-    position: absolute; top: 8px; right: 32px;
+    position: absolute; top: 8px; right: 60px;
 	font-size: 12px;
+	cursor: pointer;
   }
 
   .cam_info {
     background:#1b1b21;
-    height: 200px; width:74%;
+    height: 200px; width:70%;
     float:left;
     border-radius: 15px;
     color: white;
@@ -77,7 +79,7 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
   .table_wrapper {
     overflow-y: scroll;
     white-space: nowrap;
-    width: 92%;
+    width: 95%;
     margin: 0 auto;
   }
   /* scrollbar 속성 변경 */
