--- a/views/admin/setting1.ejs
+++ b/views/admin/setting1.ejs
@@ -1,6 +1,6 @@
 <div id="setting1">
   <!--<%= data.sizeW %>-->
-    <form action="./setting1" method="post" id="setting1">
+    <form action="./update" method="post" id="setting1">
     <div class="info" id="info_camera">
       <table>
         <tr class="info_title">
