--- a/views/admin/setting2.ejs
+++ b/views/admin/setting2.ejs
@@ -1,5 +1,5 @@
 <div id="setting3"> <!-- view -->
-    <form action="./setting2" method="post">
+    <form action="./update" method="post">
     <div class="info" id="info_camera">
       <table>
         <tr class="info_title">
