--- a/views/admin/setting2.ejs
+++ b/views/admin/setting2.ejs
@@ -82,7 +82,7 @@
 
 
   <div id="setting2"> <!--수정 하는 곳-->
-      <form action="./setting2" method="post">
+      <form action="../setting/update" method="post">
       <div class="info" id="info_camera">
         <table>
           <tr class="info_title">
@@ -165,4 +165,4 @@
          </form>
     </div>
 
-<script src="./public/js/setting.js"></script>
+<script src="../public/js/setting.js"></script>
