--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -5,14 +5,16 @@
     <title>admin</title>
     <link rel="stylesheet" href="../public/css/admin.css">
     <link rel="stylesheet" href="../public/css/setting.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
     <script type="text/javascript" src="../public/js/cropper.js"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 
   </head>
   <body>
     <div id = "header">
       <div id="logo">
-        <img src="./public/images/technonia_logo.png" id="header" style = "width: 150px;"/>
+        <img src="../public/images/technonia_logo.png" id="header" style = "width: 150px;"/>
       </div>
     </div>
     <div id="main">
